# Videomanager

./: .gitignore  CMakeLists.txt  Makefile  run.bat
Source/: App_enum.h  Enum.h  JSONUtils.cpp  MediaStreamDevice.h  MxDepayloaderFactory.cpp  MxDepayloaderFactory.h  MxPipelineManager.cpp  MxPipelineManager.h  Mx_MediaType.h  Mx_ParseFactory.cpp  Mx_ParseFactory.h  Pipeline.cpp  Pipeline.h  PipelineHandler.cpp  PipelineHandler.cpp.new  PipelineHandler.h  PipelineInitSequence.puml  PipelineManager.cpp  PipelineManager.h  PipelineProcess.cpp  PipelineProcess.h  PipelineRequest.cpp  PipelineRequest.h  README_DIAGRAMS.md  RandomGenerator.h  SimpleIDGenerator.h  StreamDiscoverer.cpp  StreamDiscoverer.h  Struct.h  TQueue.h  VideoManagerArchitecture.puml  VideoManagerClass.puml  VideoManagerComponent.puml  VideoManagerFlow.puml  VideoManagerInitFlow.puml  VideoManagerRequestFlow.puml  XMLUtils.cpp  XMLUtils.h  debug_config.json  main.cpp  (+4 more)
TestingCodeDocument/: 2thread.txt  3thread.txt  Flowchart_Mainclass.txt  parsingtest.txt  threadGenerateStructure.txt
header/: Enum.h  JSONUtils.h  Logger.h  MxPipelineManager.h  Pipeline.h  PipelineHandler.h
